# high-rollers

./: .gitignore  .gitmodules  .gitmodules.save  .polyscope.ini  CMakeLists.txt  README.md  gaussmap.cpp  gaussmap.h  imgui.ini  main.cpp  meshloader.cpp  meshloader.h  ref-notes.md  style-guide.md
src/: gaussmap.cpp  gaussmap.h  main.cpp  mesh.cpp  mesh.h  sim.cpp  sim.h  unionfind.cpp  unionfind.h
template_inis/: test.ini  test_cow.ini
